# cartographer

./: .gitignore  CMakeLists.txt  build.sh  cartographer-config.cmake.in  cartographer.md  package.xml
cartographer/: slam_node.cc  test_node.cc
cartographer/common/: config.h  config.h.cmake  configuration_file_resolver.cc  configuration_file_resolver.h  histogram.cc  histogram.h  lua_parameter_dictionary.cc  lua_parameter_dictionary.h  task.cc  task.h  thread_pool.cc  thread_pool.h
cartographer/common/internal/: blocking_queue.h  ceres_solver_options.cc  ceres_solver_options.h
cartographer/io/: coloring_points_processor.cc  coloring_points_processor.h  counting_points_processor.cc  counting_points_processor.h  fixed_ratio_sampling_points_processor.cc  fixed_ratio_sampling_points_processor.h  frame_id_filtering_points_processor.cc  frame_id_filtering_points_processor.h  hybrid_grid_points_processor.cc  hybrid_grid_points_processor.h  intensity_to_color_points_processor.cc  intensity_to_color_points_processor.h  min_max_range_filtering_points_processor.cc  min_max_range_filtering_points_processor.h  outlier_removing_points_processor.cc  outlier_removing_points_processor.h  pcd_writing_points_processor.cc  pcd_writing_points_processor.h  ply_writing_points_processor.cc  ply_writing_points_processor.h  points_batch.cc  points_batch.h  points_processor_pipeline_builder.cc  points_processor_pipeline_builder.h  probability_grid_points_processor.cc  probability_grid_points_processor.h  proto_stream.h  proto_stream_deserializer.cc  proto_stream_deserializer.h  serialization_format_migration.cc  serialization_format_migration.h  submap_painter.cc  vertical_range_filtering_points_processor.cc  vertical_range_filtering_points_processor.h  xray_points_processor.cc  xray_points_processor.h  xyz_writing_points_processor.cc  xyz_writing_points_processor.h
cartographer/io/internal/: in_memory_proto_stream.cc  in_memory_proto_stream.h  mapping_state_serialization.cc  mapping_state_serialization.h  pbstream_info.cc  pbstream_migrate.cc
cartographer/mapping/: hybrid_grid.h  id.h  map_builder.cc  map_builder.h  map_builder_interface.cc  map_builder_interface.h  pose_extrapolator.cc  pose_extrapolator.h  pose_extrapolator_interface.cc  pose_graph.cc  pose_graph.h  pose_graph_interface.h  pose_graph_trimmer.cc  pose_graph_trimmer.h  probability_values.cc  range_data_inserter_interface.cc  trajectory_builder_interface.cc  trajectory_builder_interface.h  trajectory_node.cc  trajectory_node.h  value_conversion_tables.cc
cartographer/mapping/2d/: grid_2d.cc  grid_2d.h  probability_grid.cc  probability_grid.h  probability_grid_range_data_inserter_2d.cc  probability_grid_range_data_inserter_2d.h  submap_2d.cc  submap_2d.h
cartographer/mapping/internal/: collated_trajectory_builder.cc  collated_trajectory_builder.h  connected_components.cc  connected_components.h  global_trajectory_builder.cc  global_trajectory_builder.h  imu_based_pose_extrapolator.cc  imu_based_pose_extrapolator.h  local_slam_result_data.h  motion_filter.cc  motion_filter.h  (+3 more)
cartographer/ros/: slam.cc  slam.h
cartographer/sensor/: compressed_point_cloud.cc  data.h
cartographer/transform/: rigid_transform.cc  rigid_transform.h  transform.cc  transform.h
configuration_files/: map_builder.lua  pose_graph.lua  trajectory_builder.lua  trajectory_builder_2d.lua
doc/: cartographer.md
launch/: slam.launch  test.launch
msg/: Posture.msg
script/: build_slam.sh  build_test.sh
scripts/: build_slam.sh  build_test.sh  command_load.sh
srv/: Command.srv
(+58 files in other folders)
